--- a/blogpost.html
+++ b/blogpost.html
@@ -5,8 +5,13 @@
     </head>
     <body>
         <div id="container">
+            <div id = "Cabecera">
+                Cabecera
+            </div>
             <div id="post">
-            <h1>Titulo atractivo e interesante del post</h1>
-            <p>Parrafo de inicio para explicar grandes cosas</p>
+                <h1>Titulo atractivo e interesante del post</h1>
+                <p>Parrafo de inicio para explicar grandes cosas</p>
+            </div>
+        </div>
     </body>
 </html>
