Se agrego un oarrafo y cambio de letra

--- a/blogpost.html
+++ b/blogpost.html
@@ -8,5 +8,9 @@
             <div id="post">
             <h1>Titulo atractivo e interesante del post</h1>
             <p>Parrafo de inicio para explicar grandes cosas</p>
+            <p>Soy Angel y tengo 17 años estoy estudiando para poder conseguir un
+                trabajo para cuando cumpla la mayoria de edad, espero que lo que estoy aprendiendo
+                me sirva mas adelante.
+            </p>
     </body>
 </html>
