Modifique la cabecera y despido

--- a/blogpost.html
+++ b/blogpost.html
@@ -7,7 +7,7 @@
         <div id="container">
             <div id = "Cabecera">
                 Hyperblog
-                <span id="tagline">Tu blog de confianza</span>
+                <span id="tagline">Tu blog maestro</span>
             </div>
             <div id="post">
             <h1>Titulo atractivo e interesante del post</h1>
@@ -16,5 +16,6 @@
                 trabajo para cuando cumpla la mayoria de edad, espero que lo que estoy aprendiendo
                 me sirva mas adelante.
             </p>
+            <p>Byeeee</p>
     </body>
 </html>
