--- a/blogpost.html
+++ b/blogpost.html
@@ -12,7 +12,7 @@
             </div>
             <div id="post">
             <h1>Titulo atractivo e interesante del post</h1>
-            <p>Pàrrafo de inicio para explicar grandes cosas</p>
+            <p>P&aacute;rrafo de inicio para explicar grandes cosas</p>
             <p>Soy Angel y tengo 17 años estoy estudiando para poder conseguir un
                 trabajo para cuando cumpla la mayoria de edad, espero que lo que estoy aprendiendo
                 me sirva mas adelante.
